--- a/demo/Pattern Matching/pattern.html
+++ b/demo/Pattern Matching/pattern.html
@@ -32,7 +32,7 @@
                                                 
                                                 alert("Welcome to WAP LAB");
                                         document.write(Date()+"   " +"Welcome"+userid);
-                                        var randomColor = "#"+Math.floor(Math.random()+16777215).toString();
+                                        var randomColor = "#"+Math.floor(Math.random()+16777215).toString(16);
                                         document.body.bgColor = randomColor;
 
                                         }
